RESOLVED FIXED261701
showPicker() method does not trigger datalist
https://bugs.webkit.org/show_bug.cgi?id=261701
Summary showPicker() method does not trigger datalist
Luke Warlow
Reported 2023-09-18 15:02:53 PDT
Visit https://demo.lukewarlow.dev/showPicker/ When click the showPicker buttons for the various inputs near the bottom that have attached datalists nothing happens. I would expect this to behave like Chrome and correctly show the datalist.
Attachments
Karl Dubost
Comment 1 2023-09-19 01:32:29 PDT
Y = Yes N = No M = Maybe Tested on macOS, not iOS S F C ------ Y Y Y date (for Safari only on clicking the field) M M Y datetime-local (for Safari only on clicking the field. For Firefox/Safari, no time picker) N N Y time N N Y month (Safari/Firefox shows text instead of month) N N Y week (Safari/Firefox shows text instead of week) Y Y Y color N N M email (Chrome shows item1) Y Y Y file Y Y M number (Chrome shows item1. Safari/Firefox have widgets for selecting numbers) N N M search (Chrome shows item1) N N M tel (Chrome shows item1) N N M text (Chrome shows item1) N N M url (Chrome shows item1) To note that this is probably not part of WebKit for most of it, but UIKit.
Luke Warlow
Comment 2 2023-09-19 05:58:24 PDT
Radar WebKit Bug Importer
Comment 3 2023-09-25 15:03:36 PDT
EWS
Comment 4 2023-10-30 16:03:24 PDT
Committed 269981@main (dddc5bb328a4): <https://commits.webkit.org/269981@main> Reviewed commits have been landed. Closing PR #17910 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.