showPicker() method of inputs doesn't trigger datalist suggestions https://bugs.webkit.org/show_bug.cgi?id=261701

Reviewed by Aditya Keerthi.

Implements showPicker for TextFieldInputs that have a datalist.
This does not work on iOS a follow up will address that.

* LayoutTests/fast/forms/datalist/datalist-show-picker-expected.txt: Added.
* LayoutTests/fast/forms/datalist/datalist-show-picker.html: Added.
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::showPicker):
* Source/WebCore/html/TextFieldInputType.h:

Canonical link: https://commits.webkit.org/269981@main